fix(build): 跑通最新 LTS（JDK 25）档位全流程
合并 main 后以最新 LTS 档位（JDK_VERSION=25）跑 `gradle build`，暴露 41 个测试失败，
全部为依赖升级后的行为差异。逐项定位根因并修复，现两档位全流程绿：

- jdk8 档位：2039 用例 0 失败
- 最新 LTS 档位：2039 用例 0 失败（ctool4j-doc-openapi2 见下）

主代码适配缺口（真实缺陷，非测试问题）：

- CReflectUtils：JDK 16+ 模块强封装下，对 JDK 内部类字段（AbstractList.modCount）
  与包私有构造器（TreeSet(NavigableMap)）调用 setAccessible 会抛
  InaccessibleObjectException，异常冒泡使整张字段/构造器表构建失败，深拷贝静默
  降级为“字段跳过”（值为 null）——30 个用例同源于此。改为按可访问性过滤：
  setAccessible 失败时剔除该字段/构造器。捕获 RuntimeException 后按类名判定
  InaccessibleObjectException（该类 JDK 9 才有，主代码目标版本为 Java 8）。
- CBeanUtils：JDK 15 起 lambda 改用隐藏类，类名由 Foo$$Lambda$1/0x… 变为
  Foo$$Lambda/0x…，原 contains("$$Lambda$") 漏判 → lambda 值被当普通 Bean 深拷贝。
- CRestTemplateUtils：Spring Framework 7 起 RestTemplate 默认注册 Jackson 3 的
  JacksonJsonHttpMessageConverter，不再有 Jackson 2 转换器；原实现只遍历已有转换器
  改 ObjectMapper，导致入参被静默忽略。改为缺失时主动补一个 Jackson 2 转换器。

档位差异（按运行时版本或其自身特性适配）：

- ctool4j-doc-openapi2 依赖 Springfox 2.10.5（javax），无 jakarta 版本 → 判定为
  javax 专属模块，仅在 jdk8 档位纳入（settings 的 javaxOnlyModuleNames）。
  未改目录名：加 -javax 后缀会改掉 jdk8 档位既有 artifact 坐标。
- CExceptionHandlerTests 按档位分放 java-jdk8 / java-latest（AutoConfigureMockMvc
  在 Boot 4 换了包名）。
- 其余测试改为版本无关断言或按运行时 Spring 主版本判定：Spring 7 的配置候选放宽、
  Spring Security 7 的 null 入参返回 false、Spring 7 的方法不支持文案变更、
  JDK 动态代理包名（com.sun.proxy → jdk.proxyN）、方法引用引导失败异常类型、
  Throwable.cause 强封装（改用重写 getCause 的测试异常）。

兼容项登记：doc/compatibility.adoc 的「双档位运行」小节按根因逐条更新为已修复。